SERVER-10319 --rowcount,n is now used for multi-host and discover options